# surface-bench

./: .gitignore  CITATION.cff  DATASET.md  LICENSE  LICENSE-DATA  PAPER.md  PREREGISTRATION.md  README.md  RUN_CONFIRMATORY_MATRIX.md  config.toml  pyproject.toml
analysis/: HAIKU_MULTI_PILOT_ANALYSIS.md  HAIKU_MULTI_RERUN_ANALYSIS.md  README.md
results/confirmatory-20260616T172420Z/: PROVENANCE.md  report.md  robustness.md  run.json  summary.json
scenarios/cascade-idempotency-window-qa/: meta.toml
surface_bench/: grade_code.py  models.py  report.py  run.py  scenarios.py
tests/: test_provider_adapters.py
tools/: author.py  reanalysis_robustness.py
