[project]
name = "surface-bench"
version = "0.1.0"
description = "Empirically measuring how documentation accuracy affects agent task performance"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]
dev = ["pytest>=8"]
# Cross-provider adapters (#107); not needed for the Anthropic-only or offline paths.
providers = ["openai>=1.0", "google-genai>=0.3"]

[tool.setuptools.packages.find]
include = ["surface_bench*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
